2001-09-05  Tambet Ingo  <tambet@ximian.com>

	* report.pl.in (xst_report): Implement.
	(xst_report): use dynamical report message table.

	* display-conf.in (distro_file): Determine config file from X version.

	* x.pl.in: Line based to token based parser. Rewrite.

2001-08-30  Arturo Espinosa Aldama  <arturo@ximian.com>

	* internetsharing-conf.in (get_interfaces): new directive.

	* ishare.pl.in (xst_ishare_get_linux22_forward_support):
	Changed masquerading support to check for /proc/net/ip_masquerade.

2001-08-28  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_fwrules_get_ipchains): typo
	- $$hash{"kerneltool"} -> $hash{"kerneltool"}.
	Do set the "active" key, even if it's not configured.

Wed Aug 22 22:16:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* *{pl,-conf}.in: Oops, forgot about the .in suffix of files
	that haven't been processed. Put the prefix if the backend is
	the .in version.

	* *.pl.in: Ah, change had to go here too.

	* *-conf.in: Check for ___scriptsdir___ value. If it is
	___scriptsdir__, then require files on the pwd. This way we
	can call backend-conf.in directly, and without make installing.

2001-08-23  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in: Add report messages for filesys mount/unmount.
	Fix a random typo I noticed.

	* filesys.pl.in (xst_filesys_mount_on): Add error reporting.
	(xst_filesys_mount_off): Add error reporting.

2001-08-22  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_probe_load): use xst_file_* instead of open.
	(x_probe_store): ditto.
	Disable modelines for now. Misc updates.
	(x_probe_run): Removed some debugging messages.

2001-08-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_directive_run): Report the directive that
	is being processed.
	(xst_end_directive): close all debug before exit. Just paranoic.

2001-08-20  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Made probe caching. Removed some debugging messages.